--- a/BlackJack/BlackJack.csproj
+++ b/BlackJack/BlackJack.csproj
@@ -65,14 +65,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="functions\Engine.cs" />
-    <Compile Include="essentials\Profile.cs" />
-    <Compile Include="functions\Shuffle.cs" />
+    <Compile Include="App.cs" />
+    <Compile Include="Engine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="render\Balance.cs" />
-    <Compile Include="render\Render.cs" />
-    <Compile Include="template\ASCII.cs" />
+    <Compile Include="Render.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
